--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,7 +12,48 @@
 <body>
     <h1>Salary Calculator</h1>
     <h2>Add Employee</h2>
+    <input type="text" id="firstNameInput" placeholder="First Name"></input>
+    <input type="text" id="lastNameInput" placeholder="Last Name"></input>
+    <button class="submitButton">Submit</button>
     <h2>Employees</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Salary</th>
+            </tr>
+        </thead>
+        <tbody id="empTableBody">
+            <tr>
+                <td>Jen</td>
+                <td>Barber</td>
+                <td>4521</td>
+                <td>Team Lead</td>
+                <td>$80,000</td>
+                <td><button class="deleteButton">Delete</button></td>
+            </tr>
+            <tr>
+                <td>Maurice</td>
+                <td>Moss</td>
+                <td>8724</td>
+                <td>Support Team</td>
+                <td>$58,000</td>
+                <td><button class="deleteButton">Delete</button></td>
+            </tr>
+            <tr>
+                <td>Roy</td>
+                <td>Smith</td>
+                <td>9623</td>
+                <td>Quality Assurance</td>
+                <td>$48,000</td>
+                <td><button class="deleteButton">Delete</button></td>
+            </tr>
+            
+        </tbody>
+    </table>
     
 </body>
 </html>
