on submit button click-new employee info adds to table

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -14,6 +14,9 @@
     <h2>Add Employee</h2>
     <input type="text" id="firstNameInput" placeholder="First Name"></input>
     <input type="text" id="lastNameInput" placeholder="Last Name"></input>
+    <input type="text" id="idInput" placeholder="ID"></input>
+    <input type="text" id="titleInput" placeholder="Title"></input>
+    <input type="text" id="salaryInput" placeholder="Salary"></input>
     <button class="submitButton">Submit</button>
     <h2>Employees</h2>
     <table>
