base requirements done

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -35,7 +35,7 @@
                 <td>Barber</td>
                 <td>4521</td>
                 <td>Team Lead</td>
-                <td>$80,000</td>
+                <td class="indSal">80000</td>
                 <td><button class="deleteButton">Delete</button></td>
             </tr>
             <tr>
@@ -43,7 +43,7 @@
                 <td>Moss</td>
                 <td>8724</td>
                 <td>Support Team</td>
-                <td>$58,000</td>
+                <td class="indSal">58000</td>
                 <td><button class="deleteButton">Delete</button></td>
             </tr>
             <tr>
@@ -51,12 +51,14 @@
                 <td>Smith</td>
                 <td>9623</td>
                 <td>Quality Assurance</td>
-                <td>$48,000</td>
+                <td class="indSal">48000</td>
                 <td><button class="deleteButton">Delete</button></td>
             </tr>
             
         </tbody>
     </table>
+    <div id="totalMonthly"> 
+    </div>
     
 </body>
 </html>
